RESOLVED FIXED137061
Unprefix CSS cursor values zoom-in and zoom-out
https://bugs.webkit.org/show_bug.cgi?id=137061
Summary Unprefix CSS cursor values zoom-in and zoom-out
Sungmann Cho
Reported 2014-09-24 00:54:57 PDT
-webkit-zoom-in and -webkit-zoom-out are kept as aliases.
Attachments
Patch (10.77 KB, patch)
2014-09-24 01:13 PDT, Sungmann Cho
no flags
Patch (21.72 KB, patch)
2014-09-24 20:52 PDT, Sungmann Cho
no flags
Sungmann Cho
Comment 1 2014-09-24 01:13:14 PDT
WebKit Commit Bot
Comment 2 2014-09-24 01:15:02 PDT
Attachment 238589 [details] did not pass style-queue: ERROR: Source/WebCore/rendering/style/RenderStyleConstants.h:435: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] ERROR: Source/WebCore/rendering/style/RenderStyleConstants.h:436: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sungmann Cho
Comment 3 2014-09-24 20:52:43 PDT
Benjamin Poulain
Comment 4 2014-09-25 17:38:24 PDT
Comment on attachment 238638 [details] Patch Looks good to me. Cleaning up the enum is a nice touch :)
WebKit Commit Bot
Comment 5 2014-09-25 18:01:00 PDT
Comment on attachment 238638 [details] Patch Clearing flags on attachment: 238638 Committed r173989: <http://trac.webkit.org/changeset/173989>
WebKit Commit Bot
Comment 6 2014-09-25 18:01:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.