Unprefix CSS cursor values zoom-in and zoom-out. https://bugs.webkit.org/show_bug.cgi?id=137061

Patch by Sungmann Cho <sungmann.cho@navercorp.com> on 2014-09-25
Reviewed by Benjamin Poulain.

Source/WebCore:

This patch unprefixes CSS cursor values zoom-in and zoom-out.
-webkit-zoom-in and -webkit-zoom-out are kept as aliases.
ECursor members use InterCaps with an initial capital letter for now.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseValue):
* css/CSSPrimitiveValueMappings.h:
(WebCore::CSSPrimitiveValue::CSSPrimitiveValue):
(WebCore::CSSPrimitiveValue::operator ECursor):
* css/CSSValueKeywords.in:
* css/DeprecatedStyleBuilder.cpp:
(WebCore::ApplyPropertyCursor::applyValue):
* html/ImageDocument.cpp:
(WebCore::ImageDocument::resizeImageToFit):
(WebCore::ImageDocument::restoreImageSize):
(WebCore::ImageDocument::windowSizeChanged):
* page/EventHandler.cpp:
(WebCore::EventHandler::selectCursor):
* rendering/style/RenderStyle.h:
* rendering/style/RenderStyleConstants.h:

LayoutTests:

Add test cases for zoom-in, zoom-out, -webkit-zoom-in, -webkit-zoom-out.

* fast/css/cursor-parsing-expected.txt:
* fast/css/cursor-parsing.html:

Canonical link: https://commits.webkit.org/154942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173989 268f45cc-cd09-0410-ab3c-d52691b4dbfc